# worklife-technical-test

./: .gitignore  Dockerfile  Makefile  README.md  app.test.env  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 27bf2aa3b8c7_first_migration.py  7f84e6f9fd6f_start_date_end_date_constaint.py  b70e4e1f8862_3_cascade_all_delete_for_relationships.py  c544964d931a_vacation_types_and_balances.py  f7186c348c68_vacation_model_and_relationship.py  fa2b0fb44f72_cascade_all_delete_for_relationships.py  fd69165cee5f_vacation_types_and_balances.py  ffd12f1a3a13_2_cascade_all_delete_for_relationships.py
app/api/: __init__.py
app/api/routes/: balance.py  employee.py  vacation.py  vacation_type.py
app/api/test/: common.py  test_balance.py  test_employee.py  test_vacation.py  test_vacation_type.py
app/core/: config.py
app/db/: session.py
app/model/: __init__.py  balance.py  base.py  employee.py  vacation.py  vacation_type.py
app/repository/: balance.py  base.py  employee.py  vacation.py  vacation_type.py
app/schema/: __init__.py  balance.py  employee.py  vacation.py  vacation_type.py
scripts/: create_db.sql
